# graphiti-rust-port

./: .gitignore  graphiti-rust-porting-plan.md  obsidian-mcp-server-plan.md
graphiti-rs/: Cargo.toml  PLAN.md  PORTING_PLAN.md
graphiti-rs/benches/: search.rs  similarity.rs
graphiti-rs/src/: errors.rs  lib.rs  types.rs
graphiti-rs/src/driver/: mod.rs
graphiti-rs/src/driver/neo4j/: mod.rs
graphiti-rs/src/edges/: community.rs  entity.rs  episodic.rs  has_episode.rs  mod.rs  next_episode.rs
graphiti-rs/src/embedder/: mod.rs  openai.rs
graphiti-rs/src/llm_client/: mod.rs  openai.rs
graphiti-rs/src/nodes/: community.rs  entity.rs  episodic.rs  mod.rs  saga.rs
graphiti-rs/src/pipeline/: mod.rs
graphiti-rs/src/prompts/: mod.rs
graphiti-rs/src/search/: mod.rs
graphiti-rs/src/utils/: datetime.rs  mod.rs  similarity.rs  text.rs
graphiti-rs/tests/: entity_edge.rs
obsidian-mcp-server/: Cargo.toml  Dockerfile
obsidian-mcp-server/k8s/: pvc.yaml
obsidian-mcp-server/kubernetes/: configmap.yaml  deployment.yaml  kustomization.yaml  networkpolicy.yaml  service.yaml
obsidian-mcp-server/src/: config.rs  lib.rs  main.rs  server.rs
obsidian-mcp-server/src/vault/: fs.rs  mod.rs  path.rs  undo.rs
obsidian-mcp-server/tests/helpers/: mod.rs
